added download pdf

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <!-- Custom styles for this template -->
     <link href="css/album.css" rel="stylesheet">
+
+    <script type="text/javascript" src=js/article.js></script>
   </head>
 
   <body>
@@ -57,7 +59,7 @@
       <section class="jumbotron text-center">
         <div class="container">
           <h1 class="jumbotron-heading">Tutto Santarcangelo</h1>
-          <p class="lead text-muted">All'interno di questo sito puoi trovare informazioni relative a Santarcangelo di Romagna e ai suoi numerosi eventi.</p>
+          <p class="lead text-muted">All'interno di questo sito puoi trovare informazioni relative a Santarcangelo di Romagna e ai suoi eventi.</p>
           <p>
             <a href="#" class="btn btn-primary my-2">Scopri di più</a>
             <a href="contact.html" class="btn btn-secondary my-2">Contattaci</a>
@@ -151,20 +153,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/vendor/holder.min.js"></script>
 
   </body>
-
-    <script type="text/javascript">
-      function downloadArticle(article){
-        alert("ciao");
-      }
-
-      function goToArticle(article){
-        alert("ciao");
-        location.href = "events/calici-di-stelle.html";
-      }
-    </script>
 </html>
