--- a/events/festival-santarcangelo.html
+++ b/events/festival-santarcangelo.html
@@ -6,16 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" type="image/png" href="img/favicon/comuneLogo.jpeg"/>
+    <link rel="icon" type="image/png" href="../img/favicon/comuneLogo.jpeg"/>
 
-    <title>Contattaci</title>
+    <title>Santarcangelo Festival 2050</title>
 
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- PDF Lib -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
 
     <!-- Custom styles for this template -->
-    <link href="css/album.css" rel="stylesheet">
+    <link href="../css/album.css" rel="stylesheet">
+    <script src="../js/article.js" type="text/javascript"></script>
+
   </head>
 
   <body>
@@ -42,7 +47,7 @@
       <div class="navbar box-shadow">
         <div class="container d-flex justify-content-between">
           <a href="#" class="navbar-brand d-flex align-items-center">
-            <img src="img/logo/santarcangeloLogoScritto.jpeg" width="250px" height="90px">
+            <img src="../img/logo/santarcangeloLogoScritto.jpeg" width="250px" height="90px">
             <strong></strong>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,8 +61,8 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">Santarcangelo Festival 2050</h1>
-          <p class="lead text-muted">Puoi richiedere informazioni direttamente a noi oppure contattare l'info point al tel. 000000000.</p>
+          <h1 id="pageTitle" class="jumbotron-heading">Santarcangelo Festival 2050</h1>
+          <p id="pageLittleDescription" class="lead text-muted">Descrizione al fly di Santarcangelo Festival 2050.</p>
           <p>
             <a href="../index.html" class="btn btn-primary my-2">Torna alla home</a>
           </p>
@@ -65,29 +70,9 @@
       </section>
 
       <div class="album py-5 bg-light">
-        <div class="container">
-          <div class="form-group row">
-              <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
-              <div class="col-sm-10">
-                <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="latuaemaildaserver@example.com">
-              </div>
-            </div>
-
-      <div class="form-group">
-          <label for="exampleFormControlSelect1">Categoria:</label>
-          <select class="form-control" id="exampleFormControlSelect1">
-            <option>Santarcangelo di Romagna</option>
-            <option>Evento</option>
-            <option>Informazione di carattere generale</option>
-            <option>Altro</option>
-          </select>
-        </div>
-          <div class="form-group">
-              <label for="exampleFormControlTextarea1">La tua richiesta:</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
-          <button id="submitButton" type="button" class="btn btn-primary btn-lg">Invia</button>
-        </div>
+        <div class="form-group row" id="pageDescription">testo da scaricare perche ci vuole, questo testo sara da cambiare con una descrizione esattamente copia e incollata spudoratamente dal primo link che risulta cercando calici di stelle santarczngelo su google, spero si faccia presto che non ne posso piu, sto diventando buiz
+          </div>
+          <input class="btn btn-primary my-2" type="button" id="btnDownloadArticle" value="download" onclick="downloadArticle(2)">
       </div>
     </main>
 
@@ -105,8 +90,5 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/vendor/holder.min.js"></script>
   </body>
 </html>
