added balconi fioriti and san michele, modified index

--- a/events/festival-santarcangelo.html
+++ b/events/festival-santarcangelo.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html lang="en">
-
+<html lang="it">
 
 <head>
   <meta charset="utf-8">
@@ -46,7 +45,7 @@
     </div>
     <div class="navbar box-shadow">
       <div class="container d-flex justify-content-between">
-        <a href="#" class="navbar-brand d-flex align-items-center">
+        <a href="../index.html" class="navbar-brand d-flex align-items-center">
           <img src="../img/logo/santarcangeloLogoScritto.jpeg" width="250px" height="90px">
           <strong></strong>
         </a>
@@ -59,25 +58,26 @@
   </header>
 
   <main role="main">
-      <section class="jumbotron text-center">
-        <div class="container">
-          <h1 id="pageTitle" class="jumbotron-heading">Santarcangelo Festival 2050</h1>
-          <p id="pageLittleDescription" class="lead text-muted">Descrizione al fly di Santarcangelo Festival 2050.</p>
-          <p>
-            <a href="../index.html" class="btn btn-primary my-2">Torna alla home</a>
-          </p>
-        </div>
-      </section>
-
-      <div class="album py-5 bg-light">
-        <div class="form-group row" id="pageDescription">testo da scaricare perche ci vuole, questo testo sara da cambiare con una descrizione esattamente copia e incollata spudoratamente dal primo link che risulta cercando calici di stelle santarczngelo su google, spero si faccia presto che non ne posso piu, sto diventando buiz
-          </div>
-          <input class="btn btn-primary my-2" type="button" id="btnDownloadArticle" value="download" onclick="downloadArticle(2)">
+    <section class="jumbotron text-center">
+      <div class="container">
+        <h1 id="pageTitle" class="jumbotron-heading">Santarcangelo Festival 2050</h1>
+        <p id="pageLittleDescription" class="lead text-muted">Descrizione al fly di Santarcangelo Festival 2050.</p>
+        <p>
+          <a href="../index.html" class="btn btn-primary my-2">Torna alla home</a>
+        </p>
       </div>
+    </section>
+
+    <div class="album py-5 bg-light">
+      <div class="form-group row" id="pageDescription">testo da scaricare perche ci vuole, questo testo sara da cambiare con una descrizione esattamente copia e incollata spudoratamente dal primo link che risulta cercando calici di stelle
+        santarczngelo su google, spero si faccia presto che non ne posso piu, sto diventando buiz
+      </div>
+      <input class="btn btn-primary my-2" type="button" id="btnDownloadArticle" value="download" onclick="downloadArticle(2)">
+    </div>
     </div>
   </main>
 
-  <footer class="text-muted">
+  <footer class="text-muted p-4">
     <div class="container">
       <p class="float-right">
         <a href="#">Torna in alto</a>
@@ -87,4 +87,5 @@
   </footer>
 
 </body>
+
 </html>
