--- a/events/balconi-fioriti.html
+++ b/events/balconi-fioriti.html
@@ -8,7 +8,7 @@
   <meta name="author" content="">
   <link rel="icon" type="image/png" href="../img/favicon/comuneLogo.jpeg" />
 
-  <title>Calici di Stelle</title>
+  <title>Balconi Fioriti</title>
 
   <!-- JQuery -->
   <script src="../libraries/jquery-3.5.1.min.js"></script>
@@ -61,8 +61,11 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 id="pageTitle" class="jumbotron-heading">Calici di Stelle</h1>
-          <p id="pageLittleDescription" class="lead text-muted">Descrizione al fly di calici di stelle.</p>
+          <h1 id="pageTitle" class="jumbotron-heading">Balconi Fioriti</h1>
+          <p id="pageLittleDescription" class="lead text-muted">Appuntamento dedicato al mondo della natura.
+            Balconi, terrazzi, giardini, vetrine esibiscono una esplosione di colori e di profumi. Fiori dai mille colori,
+            piante e decorazioni impreziosiscono la città donandole un’atmosfera da fiaba.
+            Imperdibile il mercatino floreale in piazza Ganganelli e in piazza L. Marini.</p>
           <p>
             <a href="../index.html" class="btn btn-primary my-2">Torna alla home</a>
           </p>
