--- a/events/fiera-san-michele.html
+++ b/events/fiera-san-michele.html
@@ -8,7 +8,7 @@
   <meta name="author" content="">
   <link rel="icon" type="image/png" href="../img/favicon/comuneLogo.jpeg" />
 
-  <title>Calici di Stelle</title>
+  <title>Fiera di San Michele</title>
 
   <!-- JQuery -->
   <script src="../libraries/jquery-3.5.1.min.js"></script>
@@ -61,8 +61,12 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 id="pageTitle" class="jumbotron-heading">Calici di Stelle</h1>
-          <p id="pageLittleDescription" class="lead text-muted">Descrizione al fly di calici di stelle.</p>
+          <h1 id="pageTitle" class="jumbotron-heading">Fiera di San Michele</h1>
+          <p id="pageLittleDescription" class="lead text-muted">Conosciuta come “Fiera degli uccelli”.
+Appuntamento dedicato al mondo degli animali, della natura e all’ambiente.
+Sono organizzati eventi e mostre a tema. Per i più piccoli e non solo, si svolgono iniziative didattiche, laboratori legati al mondo degli animali e della natura.
+Numerose bancarelle nelle vie del centro esibiscono articoli per il giardinaggio, piante, fiori e prodotti naturali.
+Assolutamente imperdibile la gara canora degli uccelli.</p>
           <p>
             <a href="../index.html" class="btn btn-primary my-2">Torna alla home</a>
           </p>
