--- a/events/san-martino-santarcangelo.html
+++ b/events/san-martino-santarcangelo.html
@@ -1,6 +1,6 @@
 
 <!doctype html>
-<html lang="en">
+<html lang="it">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -43,7 +43,7 @@
       </div>
       <div class="navbar box-shadow">
         <div class="container d-flex justify-content-between">
-          <a href="#" class="navbar-brand d-flex align-items-center">
+          <a href="../index.html" class="navbar-brand d-flex align-items-center">
             <img src="../img/logo/santarcangeloLogoScritto.jpeg" width="250px" height="90px">
             <strong></strong>
           </a>
@@ -73,7 +73,7 @@
       </div>
     </main>
 
-    <footer class="text-muted">
+    <footer class="text-muted p-4">
       <div class="container">
         <p class="float-right">
           <a href="#">Torna in alto</a>
