added articles to three events

--- a/events/calici-di-stelle.html
+++ b/events/calici-di-stelle.html
@@ -59,23 +59,102 @@
 
   <main role="main">
 
-      <section class="jumbotron text-center">
-        <div class="container">
-          <h1 id="pageTitle" class="jumbotron-heading">Calici di Stelle</h1>
-          <p id="pageLittleDescription" class="lead text-muted">Descrizione al fly di calici di stelle.</p>
-          <p>
-            <a href="../index.html" class="btn btn-primary my-2">Torna alla home</a>
-          </p>
-        </div>
-      </section>
-
-      <div class="album py-5 bg-light">
-        <div class="container">
-          <div class="form-group row" id="pageDescription">testo da scaricare perche ci vuole, questo testo sara da cambiare con una descrizione esattamente copia e incollata spudoratamente dal primo link che risulta cercando calici di stelle santarczngelo su google, spero si faccia presto che non ne posso piu, sto diventando buiz
-          </div>
-          <input class="btn btn-primary my-2" type="button" id="btnDownloadArticle" value="download" onclick="downloadArticle(0)">
-        </div>
+    <section class="jumbotron text-center">
+      <div class="container">
+        <h1 id="pageTitle" class="jumbotron-heading">Calici di Stelle</h1>
+        <p id="pageLittleDescription" class="lead text-muted">Evento dedicato al buon vino che si terrà venerdì 6 e sabato 7 agosto nella splendida cornice del Parco
+          “Campo della Fiera” e dello Sferisterio.</p>
+        <p>
+          <a href="../index.html" class="btn btn-primary my-2">Torna alla home</a>
+        </p>
       </div>
+    </section>
+
+    <section class="p-5">
+      <div id="article">
+        <p>
+          Calici Santarcangelo 2021
+          con la XXIII edizione torna il format abituale
+          Venerdì 6 e sabato 7 agosto
+          due serate dedicate al #semplicementemagico, in totale sicurezza
+        </p>
+
+        <p>
+          In collaborazione con l’Amministrazione comunale di Santarcangelo, gli organizzatori della manifestazione hanno messo a punto un programma ricco di iniziative che pone al centro la qualità dei vini provenienti dalla Provincia di Rimini.
+          Saranno infatti 17 le cantine del territorio presenti alla due giorni, a cui si affiancheranno diverse specialità gastronomiche con cinque punti food.
+        </p>
+
+        <p>
+          Altrettanto ricca la proposta musicale con otto artisti nazionali e internazionali e diversi spettacoli di reading e animazione che accompagneranno le due serate fra Sferisterio e gli spazi allestiti per l’occasione al Prato sommerso e
+          alla Fontana dell’Acqua.
+        </p>
+
+        <p>
+          Venerdì 6 agosto la serata sarà animata dallo spettacolo di Liana Mussoni e Fabrizio Flisi “L’angelo coi baffi e altre storie” (ore 20,45), dal folk americano dei “Nashville & Backbones” (ore 21,30), dallo swing tutto in stile New Orleans
+          del gruppo “The Indians” (ore 22,30) e dalla musica cubana dei “Pennabilli Social Club” (ore 23).
+        </p>
+
+        <p>
+          Il programma di sabato 7 agosto inizia invece con il reading di Remo Vigorelli, accompagnato da Tiziano Paganelli, “Ode al vino e ad altre bontà” per proseguire poi con i concerti dei gruppi “Camilla & i Bomboloni alla crema” (geghegé
+          italiano, ore 21,30), “Piccola Orchestra Orientabile” (musica Sudamericana, ore 22,30) e “Del Barrio” (Musica Sudamericana, ore 23). In entrambe le serate, infine, la Combriccola dei Lilipuzziani porterà in scena spettacoli di animazione
+          itineranti.
+        </p>
+
+        <p>
+          Grazie alla presenza degli astrofili di Santarcangelo, sarà inoltre possibile ammirare le stelle da un punto di osservazione allestito ad hoc, al centro del parco.
+        </p>
+
+        <p>
+          La voglia di stare insieme, degustando eccellenze vinicole e buona musica, da sempre denominatori comuni della manifestazione, troveranno conferma anche in questa edizione, pensata e organizzata per garantire la sicurezza dei partecipanti.
+          In questo senso, la coincidenza con l’entrata in vigore del green pass aggiungerà un ulteriore elemento di rassicurazione per tutti gli ospiti di Calici Santarcangelo, la manifestazione più coinvolgente e divertente dell’estate
+          santarcangiolese.
+        </p>
+
+        <p>
+          Un pic-nic sotto le stelle, assaporando un calice di vino, buon cibo e ottimo intrattenimento, il tutto in piena sicurezza, sono gli ingredienti di Calici 2021 che vuole essere #semplicementemagico, con il ritorno alla semplicità delle cose
+          belle.
+        </p>
+
+        <p>
+          Per facilitare l’accesso a Calici (dalle ore 19 alle ore 00,30), gli organizzatori consigliano di acquistare giorni prima il kit dell’evento (calice, tasca e quattro coupon al costo di 15 euro), in modo da prenotare la presenza, tenuto
+          conto che la capienza massima per ciascuna serata è di 2000 persone. In alternativa il kit potrà essere acquistato presso le attività economiche che aderiranno all’iniziativa oppure in piazza Marconi nel corso delle due serate.
+        </p>
+
+        <p>
+          La prenotazione permetterà di espletare più facilmente il controllo green pass tramite mail, agevolando l’entrata alla manifestazione che per l’occasione, oltre ai volontari delle due associazioni potrà contare sulla presenza di steward e
+          personale addetto agli ingressi nei due varchi previsti in via De Bosis e in piazza Marconi. In piazza Marconi sarà inoltre possibile acquistare il kit di Calici nonché sottoporsi a un tampone rapido per l’ingresso e, all’uscita, fare la
+          prova dell’alcoltest presso il gazebo della Polizia locale Valmarecchia.
+        </p>
+
+        <p>
+          Le aziende vinicole: <br>
+          Agriturismo San Rocco, Azienda Agricola Fattoria Poggio San Martino, Azienda Agricola Fiammetta, Azienda Agricola Galli Franco, Azienda Agricola Pastocchi Claudio, Palazzo Astolfi Agriturismo, Società Agricola Case Marcosanti, Società
+          Agricola Collina Dei Poeti, Società Agricola Podere dell'Angelo, Tenuta Carbognano, I piccoli vignaioli, Azienda vinicola Flenghi Nicola, Il Mandorlo, Azienda Agricola Muratori, Società Agricola Enio Ottaviani, Società Agricola Delle Selve,
+          Azienda Agricola Cretaia
+        </p>
+
+        <p>
+          Punti food: <br>
+          Enzu, RePub, Dalla Quinta, Barbara Alessi, Caffè Clementino
+        </p>
+
+        <p>
+          Calici Santarcangelo è organizzato da: <br>
+          Associazione Pro Loco di Santarcangelo di Romagna in collaborazione con l'Associazione Commercianti Santarcangiolesi Città Viva, I Love Santarcangelo, Strada dei Vini e dei Sapori dei Colli di Rimini, Visit Santarcangelo, Città Slow. Con il
+          patrocinio del Comune di Santarcangelo di Romagna.
+        </p>
+      </div>
+    </section>
+
+
+    <div class="album p-5 bg-light">
+      <div class="container">
+        <div class="form-group row" id="pageDescription">testo da scaricare perche ci vuole, questo testo sara da cambiare con una descrizione esattamente copia e incollata spudoratamente dal primo link che risulta cercando calici di stelle
+          santarczngelo su google, spero si faccia presto che non ne posso piu, sto diventando buiz
+        </div>
+        <input class="btn btn-primary my-2" type="button" id="btnDownloadArticle" value="download" onclick="downloadArticle(0)">
+      </div>
+    </div>
     </div>
   </main>
 
@@ -89,4 +168,5 @@
   </footer>
 
 </body>
+
 </html>
