--- a/events/fiera-san-michele.html
+++ b/events/fiera-san-michele.html
@@ -73,7 +73,7 @@ Assolutamente imperdibile la gara canora degli uccelli.</p>
         </div>
       </section>
 
-      <div class="album py-5 bg-light">
+      <div class="album p-5 bg-light">
         <div class="container">
           <div class="form-group row" id="pageDescription">testo da scaricare perche ci vuole, questo testo sara da cambiare con una descrizione esattamente copia e incollata spudoratamente dal primo link che risulta cercando calici di stelle santarczngelo su google, spero si faccia presto che non ne posso piu, sto diventando buiz
           </div>
