--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
     </div>
   </main>
 
-  <footer class="text-muted">
+  <footer class="text-muted p-4">
     <div class="container">
       <p class="float-right">
         <a href="#">Torna in alto</a>
