--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
   <script src="js/article.js" type="text/javascript"></script>
 
   <style media="screen">
+    html {
+      scroll-behavior: smooth;
+    }
+
     #main-section {
       background: url('img/santarcangelo.jpeg');
       background-size: cover;
       background-position: center;
     }
-
   </style>
 
 <body>
@@ -70,13 +73,13 @@
         <h1 class="jumbotron-heading" style="color: #912E36">Tutto Santarcangelo</h1>
         <p class="lead" style="color: #B75054">All'interno di questo sito puoi trovare informazioni relative a Santarcangelo di Romagna e ai suoi numerosi eventi.</p>
         <p style="position: absolute; bottom: 0; width: 96%">
-          <a href="#" class="btn btn-danger my-2">Scopri di più</a>
+          <a href="#events" class="btn btn-danger my-2">Scopri di più</a>
           <a href="contact.html" class="btn btn-secondary my-2">Contattaci</a>
         </p>
       </div>
     </section>
 
-    <div class="album py-5 bg-light">
+    <div class="album py-5 bg-light" id="events">
       <h2 class="text-center mb-5">Principali Eventi</h2>
       <div class="container">
 
@@ -183,6 +186,14 @@
 
 </body>
 
-</body>
+<script type="text/javascript">
+  function scrollToAnchor(aid) {
+    var aTag = $("a[name='" + aid + "']");
+    console.log(aTag);
+    $('html,body').animate({
+      scrollTop: aTag.offset().top
+    }, 'slow');
+  }
+</script>
 
 </html>
